[package]
name = "rust-todo-api"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Barletta <lb@bildzinkas.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
serde = "1.0.137"
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
mongodb = "2.2.2"
confy = "0.4.0"